[gd_scene load_steps=2 format=3 uid="uid://crr85kvm8e1vw"]

[ext_resource type="Script" uid="uid://dlfm01xcf731s" path="res://scenes/Inventory/InventoryUI.gd" id="1_pqlvk"]

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pqlvk")

[node name="SlotGrid" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 40
columns = 5

[node name="ItemInfoPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ItemIcon" type="TextureRect" parent="ItemInfoPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ItemName" type="Label" parent="ItemInfoPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="ItemDesc" type="RichTextLabel" parent="ItemInfoPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
